[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spatial-standards"
version = "0.1.0.dev0"
description = "Reference implementation of the On Stage and Front Row Spatial Standards: turn any recording into an 8-channel (7.1) 24-bit FLAC spatial mix."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Clearbay AI" }]
# No required third-party packages — the pipeline drives external commands
# (FFmpeg, Demucs, audio-separator, yt-dlp). Natural Perspective adds one
# optional package; see [project.optional-dependencies].
dependencies = []

[project.optional-dependencies]
# Natural Perspective control layer (the metadata/cover-art-driven selector).
# Needs a recent anthropic SDK that supports structured outputs
# (output_config.format); bump the floor if your version predates it.
natural = ["anthropic>=0.40"]

# Batteries-included, CPU by default: brings the external tools as Python
# packages so a fresh machine works after one `pip install`. static-ffmpeg
# provides the ffmpeg AND ffprobe binaries (auto-detected when none is on
# PATH). For an NVIDIA GPU, install GPU builds instead: a CUDA torch from
# pytorch.org and `audio-separator[gpu]` (much faster separation).
full = [
    "anthropic>=0.40",
    "demucs>=4.0",
    "audio-separator[cpu]",
    "yt-dlp",
    "static-ffmpeg",
]

[project.scripts]
spatial-standards = "spatial_standards.cli:main"

[project.gui-scripts]
spatial-standards-gui = "spatial_standards.gui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
spatial_standards = ["assets/*.png"]
