[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "natural-perspective-spatial-audio"
version = "0.1.2"
description = "Turn any recording into a 7.1 surround mix: a model designs a per-song spatial placement and renders a lossless 8-channel FLAC."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Clearbay AI" }]
keywords = ["spatial audio", "surround sound", "7.1", "flac", "demucs",
            "source separation", "plex", "jellyfin", "home theater"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
]
# No required third-party packages — the pipeline drives external commands
# (FFmpeg, Demucs, audio-separator, yt-dlp). Natural Perspective adds one
# optional package; see [project.optional-dependencies].
dependencies = []

[project.optional-dependencies]
# Natural Perspective control layer (the metadata/cover-art-driven selector).
# Needs a recent anthropic SDK that supports structured outputs
# (output_config.format); bump the floor if your version predates it.
natural = ["anthropic>=0.40"]

# Batteries-included, CPU by default: brings the separation tools as Python
# packages so a fresh machine works after `pip install` + a system FFmpeg
# (`brew install ffmpeg`, `apt install ffmpeg`, …). For an NVIDIA GPU, install
# GPU builds instead: a CUDA torch from pytorch.org and `audio-separator[gpu]`.
full = [
    "anthropic>=0.40",
    "demucs>=4.0",
    "audio-separator[cpu]",
    "yt-dlp",
    # torchaudio >=2.8 routes audio save/load through torchcodec, which links
    # against the system FFmpeg libraries (install FFmpeg: `brew install ffmpeg`,
    # `apt install ffmpeg`). Without it, Demucs's stem-writing dies with
    # `ModuleNotFoundError: torchcodec`. `soundfile` is a fallback audio backend.
    "torchcodec",
    "soundfile",
]

[project.urls]
Homepage = "https://github.com/mattluttrell/natural-perspective-spatial-audio"
Repository = "https://github.com/mattluttrell/natural-perspective-spatial-audio"
Issues = "https://github.com/mattluttrell/natural-perspective-spatial-audio/issues"

[project.scripts]
spatial-standards = "spatial_standards.cli:main"

[project.gui-scripts]
spatial-standards-gui = "spatial_standards.gui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
spatial_standards = ["assets/*.png"]
